--- a/index.html
+++ b/index.html
@@ -7,10 +7,29 @@
     </head>
     <body>
         <header>
-
+            <div class="wrapper">
+                <h1>Agence de Voyage <span class="pointOrange">.</span></h1>
+                <nav>
+                    <ul>
+                        <li><a href="#main-image">Accueil</a></li>
+                        <li><a href="#steps">Destination</a></li>
+                        <li><a href="#possibilities">Circuits</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         
-        <section>
+        <section id="main-image">
+            <div class="wrapper">
+
+            </div>
+        </section>
+        <section id="steps">
+        </section>
+        <section id="possibilities">
+        </section>
+        <section id="contact">
         </section>
 
         <footer>
