Modification de Main image

--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="styles.css" rel= "stylesheet">
-        <title>Agence de Voyage</title>
 
-    </head>
-    <body>
-        <header>
-            <div class="wrapper">
-                <h1>Agence de Voyage <span class="pointOrange">.</span></h1>
-                <nav>
-                    <ul>
-                        <li><a href="#main-image">Accueil</a></li>
-                        <li><a href="#steps">Destination</a></li>
-                        <li><a href="#possibilities">Circuits</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        
-        <section id="main-image">
-            <div class="wrapper">
+<head>
+    <link href="styles.css" rel="stylesheet">
+    <title>Agence de Voyage</title>
 
-            </div>
-        </section>
-        <section id="steps">
-        </section>
-        <section id="possibilities">
-        </section>
-        <section id="contact">
-        </section>
+</head>
 
-        <footer>
-        </footer>
+<body>
+    <header>
+        <div class="wrapper">
+            <h1>Agence de Voyage <span class="pointOrange">.</span></h1>
+            <nav>
+                <ul>
+                    <li><a href="#main-image">Accueil</a></li>
+                    <li><a href="#steps">Destination</a></li>
+                    <li><a href="#possibilities">Circuits</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    </body>
+    <section id="main-image">
+        <div class="wrapper">
+            <h2>Organisez votre <br>
+                <strong>voyage sur mesure</strong>
+            </h2>
+            <a href="#" class="button-1"> Mon compte github</a>
+        </div>
+    </section>
+    <section id="steps">
+    </section>
+    <section id="possibilities">
+    </section>
+    <section id="contact">
+    </section>
+
+    <footer>
+    </footer>
+
+</body>
+
 </html>
